--- a/game/static/game/sass/game_new.scss
+++ b/game/static/game/sass/game_new.scss
@@ -1,7 +1,7 @@
 /*
 Code for Life
 
-Copyright (C) 2016, Ocado Innovation Limited
+Copyright (C) 2017, Ocado Innovation Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
@@ -35,71 +35,4 @@ copyright notice and these terms. You must not misrepresent the origins of this
 program; modified versions of the program must be marked as such and not
 identified as the original program.
 */
-.form label {
-	width: 200px;
-	float: left;
-	margin: 0 20px 0 0;
-}
-
-.form input {
-	width: 200px;
-	border: 1px solid #000;
-	padding: 5px;
-}
-
-.tableWrapper {
-	overflow: auto;
-	width: 100%;
-}
-
-/* tables */
-
-table {
-	width: 99%;
-}
-
-/* Needed for keeping the rows aligned after freezing the first column */
-table tbody td {
-	/* To ensure all rows have the same height as wrapping may increases row height */
-	white-space: nowrap;
-	/* The height of the row has to be set in order for the progress bar to fit the row */
-	height: 25px;
-	font-size: 15px
-}
-
-.ui-progressbar {
-	height: 100%;
-}
-
-/* Colour for the portion of the bar which represents the percentage of levels players finished */
-.finished {
-	background: #74B06B;
-}
-/* Colour for the portion of the bar which represents the percentage of levels players finished but under a certain
- * threshold
- */
-.attempted {
-	background: #E1B377;
-}
-/* Colour for the portion of the bar which represents the percentage of levels players started but haven't submitted
- * attempts yet
- */
-.started {
-	background: #C24563;
-}
-
-.tableWrapper {
-	visibility: hidden;
-}
-
-#scoreboardTable tr td.untouched {
-	background: #d9d9d9;
-}
-/* Used for making the inside of the progress bar to fill up the entire outer container
- * margin and border are set in jquery-ui.structure.css and jquery-ui.css
- * we are overwriting the settings for the following two properties
- */
-.ui-progressbar .ui-progressbar-value{
-	margin: 0px;
-	border: 0px;
-}
+@import "partials/scoreboard";
