--- a/game/templates/game/scoreboard.html
+++ b/game/templates/game/scoreboard.html
@@ -1,4 +1,4 @@
-{% extends 'game/base.html' %}
+{% extends 'game/base_new.html' %}
 
 {% load static %}
 {% load i18n %}
@@ -30,7 +30,7 @@
               $('#progressbar' + id).multiprogressbar({
                   parts: [{value: started, barClass: 'started'},
                           {value: attempted, barClass: 'attempted'},
-                          {value: finished, barClass: 'finished'}],
+                          {value: finished, barClass: 'finished'}]
               });
           {% endfor %}
 
@@ -69,7 +69,6 @@
 
 {% block css %}
 {{block.super}}
-  <link href="{% static 'game/css/scoreboard.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'game/css/pqselect.min.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'game/css/pqselect.multiselect.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'game/css/jquery.ui.multiprogressbar.css' %}" rel="stylesheet" type="text/css">
@@ -83,76 +82,117 @@
 {% endblock nav_ocargo_scoreboard %}
 
 {% block content %}
-<h1>{% trans "Scoreboard" %}</h1><br>
-<div class='span_3_of_3'>
-  <div class='login-card'>
-    <div id="form" class="form">
-    <form action="" method="post" id="scoreboardForm">
-      {% csrf_token %}
-      <div class='section group'>
-        <div class='col span_1_of_3_strict'>
-          <div class='section group'>
-            <div class='col span_1_of_3'>
-              {% trans "Classes:" %}
+<div class="background background--primary">
+    <div class="col-sm-6 col-center">
+        <section>
+            <h1>{% trans "Scoreboard" %}</h1>
+            <div id="form" class="form">
+                <form action="" method="post" id="scoreboardForm">
+                    {% csrf_token %}
+                    <div class='row'>
+                        <div class='col-sm-6'>
+                            {% trans "Select Classes" %}
+                            <div class="class_select">
+                                <div class="master_checkbox master_checkbox--unselected">
+                                    <input id='selectedClassesListToggle' name='selectedStudentsListToggle'
+                                           type="checkbox" value="">
+                                    <small>Select all classes</small>
+                                </div>
+                                <div class="checkbox_list sub_checkbox_list">
+                                    {% for class in form.classes %}
+                                    <div class="level_section checkbox_list--item_unselected">
+                                        <small>{{ class }}</small>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            {{form.classes.errors}}
+                        </div>
+                        <div class='col-sm-6'>
+                            {% trans "Select Levels" %}
+                            <div class="class_select">
+                                <div class="master_checkbox master_checkbox--unselected">
+                                    <input id='selectedLevelsListToggle' name='selectedStudentsListToggle'
+                                           type="checkbox" value="">
+                                    <small>Select all levels</small>
+                                </div>
+                                <div class="checkbox_list main_checkbox_list">
+                                    {% for episode in form.levels_per_episode %}
+                                        <div class="episode_section sub_master_checkbox--unselected">
+                                            <small><label>
+                                                <input class="wide episodes" id="levelsListToggle{{episode.id}}"
+                                                       name="episodes" type="checkbox">
+                                                {{ episode.name }} &mdash; {{ episode.levels|length }} levels
+                                            </label></small>
+                                            <a data-toggle="collapse" data-target="#levels_select_{{episode.id}}"></a>
+                                        </div>
+                                        <div class="collapse checkbox_list sub_checkbox_list"
+                                             id="levels_select_{{episode.id}}">
+                                            {% for level in episode.levels %}
+                                                <div class="level_section checkbox_list--item_unselected">
+                                                    <small><label>
+                                                        <input class="wide levels_{{episode.id}}" id="id_levels_{{level.id}}"
+                                                               name="levels" type="checkbox">Level {{ level.name }}
+                                                    </label></small>
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            {{form.levels.errors}}
+                        </div>
+                    </div>
+                    <div class="background">
+                        <button class='button--regular button--primary--general-play' type="submit" name="export">
+                            {% trans "Export results" %}</button>
+                        <button class='button--regular button--primary--general-educate' type="submit" name="view">
+                            {% trans "View results" %}</button>
+                    </div>
+                </form>
             </div>
-            <div class='col span_2_of_3'>
-              {{form.classes.errors}}
-              {{form.classes}}
-            </div>
-          </div>
-        </div>
-        <div class='col span_1_of_3_strict'>
-          <div class='section group'>
-            <div class='col span_1_of_3'>
-              {% trans "Levels:" %}
-            </div>
-            <div class='col span_2_of_3'>
-              {{form.levels.errors}}
-              {{form.levels}}
-            </div>
-          </div>
-        </div>
-        <div class='col span_1_of_3_strict'>
-          <button class='col span_1_of_2 btn btn-primary' type="submit" name="view">{% trans "View" %}</button>
-          <button class='col span_1_of_2 btn btn-primary' type="submit" name="export">{% trans "Export" %}</button>
-        </div>
-      </div>
-    </form>
+        </section>
     </div>
-  </div>
 </div>
-<br>
-<div class="mainBody">
-  <div class="tableWrapper" id="tableWrapper">
-    {% if student_data %}
-    <table id="scoreboardTable" class="display cell-border wide">
-    <thead>
-      <tr>
-        {% for header in headers %}
-          <th {% if header == progress_header %} title='{% trans "Colours explained:&#013;Red: Number of levels which student has started but not submitted a working solution &#013;Orange: Number of levels which student has scored below 50% &#013;Green: Number of levels which student has scored above 50%" %}'{% endif %}> {{header}} </th>
-        {% endfor %}
-      </tr>
-      </thead>
-      {% for student in student_data %}
-      <tr>
-          <td> {{student.class_field}} </td>
-          <td> {{student.name}} </td>
-          <td> {{student.total_score}} </td>
-          <td> {{student.total_time}}
-          {% if not student.scores  %}
-            <td> {{student.start_time}} </td>
-            <td> {{student.finish_time}} </td>
-          {% else %}
-            <td> <div class="MultiProgressBarDiv" id="progressbar{{ student.id }}"></div> </td>
-            {% for levelScore in student.scores %}
-              {# Levels that students have not started will be marked with grey colour #}
-              <td > {{levelScore}} </td>
-            {% endfor %}
-          {% endif %}
-        </tr>
-      {% endfor %}
-    </table>
-    {% endif %}
-  </div>
+
+<div class="background col-sm-8 col-center">
+    <div class="mainBody">
+        <div>
+            {% if student_data %}
+                <table id="scoreboardTable" class="display cell-border wide">
+                    <thead>
+                        <tr>
+                            {% for header in headers %}
+                                <th {% if header == progress_header %} title='{% trans "Colours explained:&#013;Red:
+                                Number of levels which student has started but not submitted a working solution &#013;
+                                Orange: Number of levels which student has scored below 50% &#013;Green: Number of
+                                levels which student has scored above 50%" %}'{% endif %}> {{header}} </th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    {% for student in student_data %}
+                        <tr>
+                            <td> {{student.class_field}} </td>
+                            <td> {{student.name}} </td>
+                            <td> {{student.total_score}} </td>
+                            <td> {{student.total_time}} </td>
+                            {% if not student.scores  %}
+                                <td> {{student.start_time}} </td>
+                                <td> {{student.finish_time}} </td>
+                            {% else %}
+                                <td> <div class="MultiProgressBarDiv" id="progressbar{{ student.id }}"></div> </td>
+                                {% for levelScore in student.scores %}
+                                    <td > {{levelScore}} </td>
+                                {% endfor %}
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+        </div>
+    </div>
 </div>
+
+<script src="{% static 'game/js/scoreboard.js' %}"></script>
+
 {% endblock %}
